# duplifinder

./: .autoheader_cache  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  ROADMAP.md  check_imports.py  duplifinder_all_create_dump_20251101_053943.md  duplifinder_all_create_dump_20251101_053943.sha256  duplifinder_all_create_dump_20251101_143229.md  duplifinder_all_create_dump_20251101_143229.sha256  duplifinder_all_create_dump_20251102_054500.md  duplifinder_all_create_dump_20251102_054500.sha256  duplifinder_all_create_dump_20251110_184040.md  duplifinder_all_create_dump_20251110_184040.sha256  duplifinder_all_create_dump_20251111_024010.md  duplifinder_all_create_dump_20251111_024010.sha256  duplifinder_all_create_dump_20251124_142401.md  duplifinder_all_create_dump_20251124_142401.sha256  pyproject.toml
.github/workflows/: publish.yml
src/duplifinder/: __init__.py  application.py  ast_processor.py  ast_visitor.py  banner.py  cache.py  cli.py  config.py  definition_finder.py  duplicate_renderer.py  duplifinder_all_create_dump_20251101_113739.md  duplifinder_all_create_dump_20251101_113739.sha256  duplifinder_all_create_dump_20251101_162220.md  duplifinder_all_create_dump_20251101_162220.sha256  duplifinder_all_create_dump_20251110_184232.md  exceptions.py  main.py  (+10 more)
src/duplifinder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_banner.py  test_cli.py  test_config.py  test_finder.py  test_integration.py  test_main.py  test_main_exceptions.py  test_output.py  test_performance_tracker.py  test_processors.py  test_renderers.py  test_utils.py
(+1 files in other folders)
